--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -64,7 +64,7 @@ jobs:
 
     strategy:
       matrix:
-        node: [18.x，20.x]
+        node: [18.x]
         os: [ubuntu-latest, windows-latest, macos-latest]
       fail-fast: false
 
