--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,13 +10,7 @@
   ],
   "eslint.experimental.useFlatConfig": true,
   "prettier.enable": false,
-  "editor.formatOnSave": false,
-  // Auto fix
-  "editor.codeActionsOnSave": {
-    "source.fixAll": "never",
-    "source.fixAll.eslint": "explicit",
-    "source.organizeImports": "never"
-  },
+  "editor.formatOnSave": true,
   // Enable eslint for all supported languages
   "eslint.validate": [
     "javascript",
